fix: markdown highlighting

--- a/02-node-classification-exercise.ipynb
+++ b/02-node-classification-exercise.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "02x-node-classification.ipynb",
+      "name": "02-node-classification-exercise.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -265,7 +265,7 @@
         "\n",
         "Now define the training loop. One way to do so is to define the training loop as follows#\n",
         "\n",
-        "```\n",
+        "```python\n",
         "for epoch in epochs:\n",
         "    train_step()\n",
         "    eval_step()\n",
@@ -273,7 +273,7 @@
         "\n",
         "where the `train_step()` trains the model in batches for one epoch, i.e. the batches run through the data once. The function is defined as follows:\n",
         "\n",
-        "```\n",
+        "```python\n",
         "def train_step(model: torch.nn.Module,\n",
         "               optimizer: torch.optim.Optimizer,\n",
         "               train_loader: torch_geometric.loaders.DataLoader,\n",
@@ -289,7 +289,7 @@
         "\n",
         "Note that you can reuse the same function to report validation and test loss and accuracy, by appropriately setting the `eval_loader` and setting the `is_validation` flag.\n",
         "\n",
-        "```\n",
+        "```python\n",
         "def eval_step(model: torch.nn.Module,\n",
         "              eval_loader: torch_geometric.loaders.DataLoader,\n",
         "              device: torch.Device,\n",
@@ -301,7 +301,7 @@
         "\n",
         "In the `train_loop()` method, accumulate the training and validation accuracies and loss and return them as a list of tuples. Run the loop for `num_epochs` epochs, and report the losses and accuracies every N epochs. A suggested signature for the `train_loop()` method is as follows.\n",
         "\n",
-        "```\n",
+        "```python\n",
         "def train_loop(model: torch.nn.Module, \n",
         "               optimizer: torch.optim.Optimizer, \n",
         "               train_loader: torch_gemetric.loaders.DataLoader,\n",
