--- a/03-graph-classification-exercise.ipynb
+++ b/03-graph-classification-exercise.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "03x-graph-classification.ipynb",
+      "name": "03-graph-classification-exercise.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -323,7 +323,7 @@
         "    * We will need to compute the ROC-AUC instead of the accuracy per batch in our `train_step` and `eval_step` functions.\n",
         "    * At the end of each batch, accumulate a data structure `label_preds` which is a tuple of (label:Float, prediction:Array`[(Float, Float)]` and return it along with the `loss` and `accuracy`.\n",
         "\n",
-        "```\n",
+        "```python\n",
         "def train_step(model: torch.nn.Module, \n",
         "               optimizer: torch.optim.Optimizer, \n",
         "               loss_fn, torch.nn.CrossEntropyLoss,\n",
@@ -340,7 +340,7 @@
         "\n",
         "As with the `train_step`, accumulate and return the `label_preds` data structure.\n",
         "\n",
-        "```\n",
+        "```python\n",
         "def eval_step(model: torch.nn.Module, \n",
         "              loss_fn: torch.nn.CrossEntropyLoss, \n",
         "              eval_loader: torch_geometric.loader.DataLoader,\n",
@@ -357,7 +357,7 @@
         "\n",
         "Use the `roc_auc_score` from Scikit-Learn to compute the ROC-AUC score for training and validation from the `label_preds` data structure, and report it along with the train and validation loss and accuracy.\n",
         "\n",
-        "```\n",
+        "```python\n",
         "def train_loop(model: torch.nn.Module, \n",
         "               optimizer: torch.optim.Optimizer, \n",
         "               loss_fn: torch.nn.CrossEntropyLoss, \n",
