--- a/03-graph-classification-solution.ipynb
+++ b/03-graph-classification-solution.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "03-graph-classification.ipynb",
+      "name": "03-graph-classification-solution.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -50,7 +50,7 @@
         "import torch\n",
         "torch.__version__"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -79,7 +79,7 @@
         "!pip install -q torch-geometric\n",
         "!pip install ogb"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
       "source": [
         "from ogb.graphproppred import PygGraphPropPredDataset"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
         "dataset = PygGraphPropPredDataset(name='ogbg-molhiv')\n",
         "dataset"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,7 +153,7 @@
       "source": [
         "dataset.num_features"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,7 +179,7 @@
       "source": [
         "dataset.num_classes"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
       "source": [
         "len(dataset)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -242,7 +242,7 @@
         "import networkx as nx\n",
         "import torch_geometric.utils as pyg_utils"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
         "\n",
         "draw_graph(dataset[0].edge_index)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -293,7 +293,7 @@
         "G = pyg_utils.to_networkx(dataset[0])\n",
         "nx.draw(G)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -328,7 +328,7 @@
       "source": [
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,7 +346,7 @@
         "plt.hist(labels, bins=2)\n",
         "_ = plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -383,7 +383,7 @@
       "source": [
         "from torch_geometric.loader import DataLoader"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
         "split_idx = dataset.get_idx_split()\n",
         "split_idx"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -427,7 +427,7 @@
         "val_loader = DataLoader(dataset[split_idx[\"valid\"]], batch_size=BATCH_SIZE)\n",
         "test_loader = DataLoader(dataset[split_idx[\"test\"]], batch_size=BATCH_SIZE)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -481,7 +481,7 @@
         "\n",
         "from ogb.graphproppred.mol_encoder import AtomEncoder"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -527,7 +527,7 @@
         "    return x\n",
         "\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -549,7 +549,7 @@
         "  \n",
         "pred.size()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,7 +596,7 @@
         "    * We will need to compute the ROC-AUC instead of the accuracy per batch in our `train_step` and `eval_step` functions.\n",
         "    * At the end of each batch, accumulate a data structure `label_preds` which is a tuple of (label:Float, prediction:Array`[(Float, Float)]` and return it along with the `loss` and `accuracy`.\n",
         "\n",
-        "```\n",
+        "```python\n",
         "def train_step(model: torch.nn.Module, \n",
         "               optimizer: torch.optim.Optimizer, \n",
         "               loss_fn, torch.nn.CrossEntropyLoss,\n",
@@ -613,7 +613,7 @@
         "\n",
         "As with the `train_step`, accumulate and return the `label_preds` data structure.\n",
         "\n",
-        "```\n",
+        "```python\n",
         "def eval_step(model: torch.nn.Module, \n",
         "              loss_fn: torch.nn.CrossEntropyLoss, \n",
         "              eval_loader: torch_geometric.loader.DataLoader,\n",
@@ -630,7 +630,7 @@
         "\n",
         "Use the `roc_auc_score` from Scikit-Learn to compute the ROC-AUC score for training and validation from the `label_preds` data structure, and report it along with the train and validation loss and accuracy.\n",
         "\n",
-        "```\n",
+        "```python\n",
         "def train_loop(model: torch.nn.Module, \n",
         "               optimizer: torch.optim.Optimizer, \n",
         "               loss_fn: torch.nn.CrossEntropyLoss, \n",
@@ -653,7 +653,7 @@
       "source": [
         "from sklearn.metrics import roc_auc_score"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -736,7 +736,7 @@
         "\n",
         "  return history\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -776,7 +776,7 @@
         "\n",
         "NUM_EPOCHS = 30"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -792,7 +792,7 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "device"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -815,7 +815,7 @@
         "model = GraphClassifier(INPUT_DIM, HIDDEN_DIM, OUTPUT_DIM, NUM_GCN_LAYERS, DROPOUT_PCT)\n",
         "model = model.to(device)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -830,7 +830,7 @@
         "loss_fn = nn.BCEWithLogitsLoss()\n",
         "optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -845,7 +845,7 @@
       "source": [
         "history = train_loop(model, optimizer, loss_fn, train_loader, val_loader, device, NUM_EPOCHS)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,7 +916,7 @@
         "\n",
         "display_training_plots(history)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -960,7 +960,7 @@
         "print(\"Test accuracy: {:.5f}\".format(test_acc))\n",
         "print(\"Test AUC: {:.5f}\".format(test_auc))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1042,7 +1042,7 @@
         "    x = self.clf_head(x)\n",
         "    return x\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1054,7 +1054,7 @@
         "model_MAX = GraphClassifier_MAX(INPUT_DIM, HIDDEN_DIM, OUTPUT_DIM, NUM_GCN_LAYERS, DROPOUT_PCT)\n",
         "model_MAX = model_MAX.to(device)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1070,7 +1070,7 @@
         "optimizer = optim.Adam(model_MAX.parameters(), lr=LEARNING_RATE)\n",
         "history_MAX = train_loop(model_MAX, optimizer, loss_fn, train_loader, val_loader, device, NUM_EPOCHS)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1100,7 +1100,7 @@
       "source": [
         "display_training_plots(history_MAX)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1131,7 +1131,7 @@
         "print(\"Test accuracy: {:.5f}\".format(test_acc))\n",
         "print(\"Test AUC: {:.5f}\".format(test_auc))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1204,7 +1204,7 @@
         "    x = self.clf_head(x)\n",
         "    return x\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1216,7 +1216,7 @@
         "model_SUM = GraphClassifier_SUM(INPUT_DIM, HIDDEN_DIM, OUTPUT_DIM, NUM_GCN_LAYERS, DROPOUT_PCT)\n",
         "model_SUM = model_SUM.to(device)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1232,7 +1232,7 @@
         "optimizer = optim.Adam(model_SUM.parameters(), lr=LEARNING_RATE)\n",
         "history_SUM = train_loop(model_SUM, optimizer, loss_fn, train_loader, val_loader, device, NUM_EPOCHS)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,7 +1262,7 @@
       "source": [
         "display_training_plots(history_SUM)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1293,7 +1293,7 @@
         "print(\"Test accuracy: {:.5f}\".format(test_acc))\n",
         "print(\"Test AUC: {:.5f}\".format(test_auc))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1313,7 +1313,7 @@
       "source": [
         ""
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     }
   ]
