--- a/06-custom-layer-exercise.ipynb
+++ b/06-custom-layer-exercise.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "06x-custom-layer.ipynb",
+      "name": "06-custom-layer-exercise.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -167,7 +167,7 @@
         "\n",
         "You can generate feature vectors of size `input_dim` each for N nodes and an associated `edge_index` by using the following calls.\n",
         "\n",
-        "```\n",
+        "```python\n",
         "x = torch.rand((N, input_dim))\n",
         "edge_index = pyg_utils.random.barabasi_albert_graph(N, N // 5)\n",
         "```\n",
